[package]
name = "remote_http_agent"
version = "1.0.0"
edition = "2021"

[features]
gui = []

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }

# HTTP client
reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
bytes = "1.5"
if-addrs = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
